Underneath dropdown z-index fix. (#569)
* Conflicts fixed.

* DropdownMenu z-index fix.

--- a/packages/ui-components/src/DropdownMenu/styles.scss
+++ b/packages/ui-components/src/DropdownMenu/styles.scss
@@ -1,4 +1,8 @@
 .ee-dropdown-menu {
+	&__wrapper {
+		z-index: 2;
+	}
+
 	&__list {
 		border: 1px solid var(--ee-border-color);
 		box-shadow: var(--ee-box-shadow-small);
