--- a/packages/ui-components/src/InlineEdit/InlineEditInput/style.scss
+++ b/packages/ui-components/src/InlineEdit/InlineEditInput/style.scss
@@ -44,7 +44,7 @@
 			position: relative;
 			right: -0.5rem;
 			width: 1rem;
-			z-index: 1;
+			z-index: 0;
 
 			[dir='rtl'] & {
 				right: 0.5rem;
